--- a/aip/general/0233.md
+++ b/aip/general/0233.md
@@ -108,6 +108,8 @@ message BatchCreateBooksResponse {
 
 - The response message **must** include one repeated field corresponding to the
   resources that were created.
+- The order of books in the response **must** be the same as the names in the
+  request.
 
 [aip-122-parent]: ./0122.md#fields-representing-a-resources-parent
 [request-message]: ./0133.md#request-message
