--- a/aip/general/0235.md
+++ b/aip/general/0235.md
@@ -169,6 +169,8 @@ message BatchDeleteBooksResponse {
 
 - The response message **must** include one repeated field corresponding to the
   resources that were soft-deleted.
+- The order of books in the response **must** be the same as the names in the
+  request.
 
 [aip-122-names]: ./0122.md#fields-representing-resource-names
 [aip-122-parent]: ./0122.md#fields-representing-a-resources-parent
